# PyCameraCXX

./: CMakeLists.txt  main.cpp
PyCameraClient/: CMakeLists.txt  main.cpp
PyCameraServer/: CMakeLists.txt  main.cpp  test.cpp
